<resources>
    <string name="app_name">Sổ Thu Chi</string>
</resources>
